--- a/composer.json
+++ b/composer.json
@@ -26,11 +26,11 @@
         "doctrine/collections": "^1.5",
         "monolog/monolog": "^1.24|^2.0",
         "elasticsearch/elasticsearch": "^7.0",
-        "ongr/elasticsearch-dsl": "^7.0"
+        "bistrosk/elasticsearch-dsl": "^8.0"
     },
     "require-dev": {
         "mikey179/vfsstream": "~1.6",
-        "phpunit/phpunit": "^7.0",
+        "phpunit/phpunit": "^9.0",
         "squizlabs/php_codesniffer": "^3.0",
         "symfony/browser-kit" : "^4.4|^5.0|^6.0|^7.0",
         "symfony/expression-language" : "^4.4|^5.0|^6.0|^7.0",
