--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -2,13 +2,7 @@ name: CI
 run-name: Run ${{ github.run_id }} of branch ${{ github.event.pull_request.head.ref || github.ref_name }}
 
 on:
-  pull_request_review:
-    types: [ submitted ]
-  push:
-    tags:
-      - v**
-    branches:
-      - master
+  { push }
 
 
 concurrency:
