--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -2,7 +2,13 @@ name: CI
 run-name: Run ${{ github.run_id }} of branch ${{ github.event.pull_request.head.ref || github.ref_name }}
 
 on:
-  { push }
+  pull_request_review:
+    types: [ submitted ]
+  push:
+    tags:
+      - v**
+    branches:
+      - master
 
 
 concurrency:
