--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -36,7 +36,7 @@ jobs:
           -H "Accept: application/vnd.github+json" \
           -H "Authorization: Bearer ${{ secrets.GITHUB_TOKEN }}" \
           -H "X-GitHub-Api-Version: 2022-11-28" \
-          https://api.github.com/repos/TLF-E/${{ github.event.repository.name }}/releases/latest | jq -r '.tag_name')
+          https://api.github.com/repos/LRGI-tech/${{ github.event.repository.name }}/releases/latest | jq -r '.tag_name')
           echo "$VERSION"
           regexVersion="v([0-9]+).([0-9]+).?([0-9]+)?"
           if [[ $VERSION =~ $regexVersion ]]; then
@@ -64,13 +64,13 @@ jobs:
           body="${{ fromJSON(steps.PR.outputs.pr).head.ref }}"
           branchRegex="^([a-zA-Z]+)-([0-9]+)$"
           if [[ "${{ fromJSON(steps.PR.outputs.pr).head.ref }}" =~ $branchRegex ]]; then
-              body="[${{ fromJSON(steps.PR.outputs.pr).head.ref }}](https://tlfe.atlassian.net/browse/${{ fromJSON(steps.PR.outputs.pr).head.ref }})"
+              body="[${{ fromJSON(steps.PR.outputs.pr).head.ref }}](https://celesta.atlassian.net/browse/${{ fromJSON(steps.PR.outputs.pr).head.ref }})"
           fi
           response=$(curl --write-out '%{http_code}' -L -X POST \
           -H "Accept: application/vnd.github+json" \
           -H "Authorization: Bearer ${{ secrets.GITHUB_TOKEN }}" \
           -H "X-GitHub-Api-Version: 2022-11-28" \
-          https://api.github.com/repos/TLF-E/${{ github.event.repository.name }}/releases \
+          https://api.github.com/repos/LRGI-tech/${{ github.event.repository.name }}/releases \
           -d '{"tag_name":"${{ env.VERSION }}","name":"${{ env.VERSION }}","body":"'$body'","draft":false,"prerelease":false,"generate_release_notes":false}')
           code=$(tail -n1 <<< "$response")  
           content=$(sed '$ d' <<< "$response")
